--- a/package.json
+++ b/package.json
@@ -5,30 +5,34 @@
   "author": "Austin Green",
   "dependencies": {
     "bulma": "^0.9.0",
-    "gatsby": "^2.20.35",
-    "gatsby-image": "^2.3.5",
-    "gatsby-plugin-netlify": "^2.2.4",
-    "gatsby-plugin-netlify-cms": "^4.2.5",
+    "framer-motion": "^2.6.8",
+    "gatsby": "^2.24.53",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-netlify": "^2.3.13",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.2.5",
-    "gatsby-plugin-sass": "^2.2.4",
-    "gatsby-plugin-sharp": "^2.5.7",
-    "gatsby-remark-copy-linked-files": "^2.2.4",
-    "gatsby-remark-images": "^3.2.6",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.31",
+    "gatsby-remark-copy-linked-files": "^2.3.13",
+    "gatsby-remark-images": "^3.3.28",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^2.2.5",
-    "gatsby-transformer-remark": "^2.7.5",
-    "gatsby-transformer-sharp": "^2.4.7",
-    "lodash": "^4.17.15",
+    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-transformer-remark": "^2.8.32",
+    "gatsby-transformer-sharp": "^2.5.14",
+    "lodash": "^4.17.20",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.9.6",
-    "netlify-cms-media-library-cloudinary": "^1.3.2",
-    "netlify-cms-media-library-uploadcare": "^0.5.2",
+    "netlify-cms-app": "^2.12.20",
+    "netlify-cms-media-library-cloudinary": "^1.3.6",
+    "netlify-cms-media-library-uploadcare": "^0.5.7",
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-elastic-carousel": "^0.6.7",
     "react-helmet": "^6.0.0",
+    "react-icons": "^3.11.0",
+    "react-modal": "^3.11.2",
+    "styled-components": "^5.1.1",
     "uuid": "^7.0.0"
   },
   "keywords": [
@@ -45,6 +49,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.1"
   }
 }
